[gd_scene load_steps=52 format=3 uid="uid://d4k7yy14qfd5d"]

[ext_resource type="Script" path="res://Assets/Scenes/couple.gd" id="1_n7npp"]
[ext_resource type="Texture2D" uid="uid://dmanr53nwvcut" path="res://Assets/Characters/man-sheet.png" id="2_j23ip"]
[ext_resource type="Texture2D" uid="uid://c6o0klwqw2byb" path="res://Assets/Characters/speechbubble.png" id="3_dv7gh"]
[ext_resource type="Texture2D" uid="uid://bhvc2lkfnv1tl" path="res://Assets/Food/steak.png" id="4_tflw4"]
[ext_resource type="Texture2D" uid="uid://1jukbyg3apdg" path="res://Assets/Food/Spaghetti.png" id="5_dvv6d"]
[ext_resource type="Texture2D" uid="uid://b2vee5f37yhkq" path="res://Assets/Food/salad.png" id="6_mrt78"]
[ext_resource type="Texture2D" uid="uid://bxnl2dty6yk7m" path="res://Assets/Characters/questionmark.png" id="7_1tdnp"]
[ext_resource type="Texture2D" uid="uid://c2h6mchuafjm0" path="res://Assets/Characters/woman-sheet.png" id="8_trujc"]
[ext_resource type="Texture2D" uid="uid://bm86us63tlafh" path="res://Assets/Characters/dress-sheet.png" id="9_e40xt"]
[ext_resource type="Texture2D" uid="uid://dtpryga6p32n3" path="res://Assets/Characters/eye-sheet.png" id="10_jkkxs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ml4k4"]
atlas = ExtResource("2_j23ip")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjolf"]
atlas = ExtResource("2_j23ip")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xjrv"]
atlas = ExtResource("2_j23ip")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aopfh"]
atlas = ExtResource("2_j23ip")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5gv6"]
atlas = ExtResource("2_j23ip")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeuls"]
atlas = ExtResource("2_j23ip")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0tku"]
atlas = ExtResource("2_j23ip")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_14ved"]
atlas = ExtResource("2_j23ip")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w57nj"]
atlas = ExtResource("2_j23ip")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v3lc"]
atlas = ExtResource("2_j23ip")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gwdyw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ml4k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjolf")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xjrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aopfh")
}],
"loop": true,
"name": &"walk_back",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5gv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeuls")
}],
"loop": true,
"name": &"walk_front",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0tku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14ved")
}],
"loop": true,
"name": &"walk_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w57nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v3lc")
}],
"loop": true,
"name": &"walk_right",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lxseb"]
atlas = ExtResource("8_trujc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k17xs"]
atlas = ExtResource("8_trujc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtc18"]
atlas = ExtResource("8_trujc")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsclo"]
atlas = ExtResource("8_trujc")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_weurm"]
atlas = ExtResource("8_trujc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmgg2"]
atlas = ExtResource("8_trujc")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_klg2x"]
atlas = ExtResource("8_trujc")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh58i"]
atlas = ExtResource("8_trujc")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oacn"]
atlas = ExtResource("8_trujc")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_08vvn"]
atlas = ExtResource("8_trujc")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7b6hi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxseb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k17xs")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtc18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsclo")
}],
"loop": true,
"name": &"walk_back",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_weurm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmgg2")
}],
"loop": true,
"name": &"walk_front",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_klg2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh58i")
}],
"loop": true,
"name": &"walk_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oacn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08vvn")
}],
"loop": true,
"name": &"walk_right",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_5w7ii"]
atlas = ExtResource("9_e40xt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwctr"]
atlas = ExtResource("9_e40xt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2xbq"]
atlas = ExtResource("9_e40xt")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_chmsq"]
atlas = ExtResource("9_e40xt")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyuay"]
atlas = ExtResource("9_e40xt")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jhjy"]
atlas = ExtResource("9_e40xt")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mix01"]
atlas = ExtResource("9_e40xt")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tquuk"]
atlas = ExtResource("9_e40xt")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kln1g"]
atlas = ExtResource("9_e40xt")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eikxs"]
atlas = ExtResource("9_e40xt")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_of0hi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w7ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwctr")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2xbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chmsq")
}],
"loop": true,
"name": &"walk_back",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyuay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jhjy")
}],
"loop": true,
"name": &"walk_front",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mix01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tquuk")
}],
"loop": true,
"name": &"walk_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kln1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eikxs")
}],
"loop": true,
"name": &"walk_right",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_b1pre"]
atlas = ExtResource("10_jkkxs")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuqek"]
atlas = ExtResource("10_jkkxs")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_04gg2"]
atlas = ExtResource("10_jkkxs")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lsj2"]
atlas = ExtResource("10_jkkxs")
region = Rect2(128, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_d70yl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1pre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuqek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04gg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lsj2")
}],
"loop": false,
"name": &"eyes",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_el8w6"]
radius = 17.5071

[sub_resource type="CircleShape2D" id="CircleShape2D_bmfwy"]
radius = 17.1828

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q860f"]
size = Vector2(160, 124)

[node name="Couple" type="CharacterBody2D" groups=["couples"]]
collision_layer = 2
collision_mask = 0
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_n7npp")

[node name="Man" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_gwdyw")
animation = &"idle"
autoplay = "idle"

[node name="ManOrder" type="Sprite2D" parent="Man"]
unique_name_in_owner = true
visible = false
position = Vector2(8.9407e-08, -13.1667)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_dv7gh")

[node name="Steak" type="Sprite2D" parent="Man/ManOrder"]
visible = false
position = Vector2(0, -1.16667)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_tflw4")

[node name="Spaghetti" type="Sprite2D" parent="Man/ManOrder"]
visible = false
position = Vector2(0, -2.00002)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_dvv6d")

[node name="Salad" type="Sprite2D" parent="Man/ManOrder"]
visible = false
position = Vector2(0, -2.00034)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_mrt78")

[node name="Question" type="Sprite2D" parent="Man/ManOrder"]
visible = false
texture = ExtResource("7_1tdnp")

[node name="Woman" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(142, 0)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_7b6hi")
animation = &"idle"
autoplay = "idle"

[node name="Dress" type="AnimatedSprite2D" parent="Woman"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_of0hi")
animation = &"idle"
autoplay = "idle"
metadata/_edit_lock_ = true

[node name="Eyes" type="AnimatedSprite2D" parent="Woman"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_d70yl")
animation = &"eyes"

[node name="WomanOrder" type="Sprite2D" parent="Woman"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -13.167)
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_dv7gh")

[node name="Steak" type="Sprite2D" parent="Woman/WomanOrder"]
visible = false
position = Vector2(0, -1.16667)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_tflw4")

[node name="Spaghetti" type="Sprite2D" parent="Woman/WomanOrder"]
visible = false
position = Vector2(0, -2.00002)
scale = Vector2(0.7, 0.7)
texture = ExtResource("5_dvv6d")

[node name="Salad" type="Sprite2D" parent="Woman/WomanOrder"]
visible = false
position = Vector2(0, -2.00034)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_mrt78")

[node name="Question" type="Sprite2D" parent="Woman/WomanOrder"]
visible = false
texture = ExtResource("7_1tdnp")

[node name="ManCollision" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 18.5)
shape = SubResource("CircleShape2D_el8w6")

[node name="WomanCollision" type="CollisionShape2D" parent="."]
position = Vector2(143, 18.5)
shape = SubResource("CircleShape2D_bmfwy")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(71, -3)
shape = SubResource("RectangleShape2D_q860f")

[node name="StatusTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true

[node name="FlickerTimerMan" type="Timer" parent="StatusTimer"]
unique_name_in_owner = true
wait_time = 0.3

[node name="FlickerTimerWoman" type="Timer" parent="StatusTimer"]
unique_name_in_owner = true
wait_time = 0.3

[node name="ExitTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true

[node name="MealTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="StatusTimer" to="." method="_on_status_timer_timeout"]
[connection signal="timeout" from="StatusTimer/FlickerTimerMan" to="." method="_on_flicker_timer_man_timeout"]
[connection signal="timeout" from="StatusTimer/FlickerTimerWoman" to="." method="_on_flicker_timer_woman_timeout"]
[connection signal="timeout" from="ExitTimer" to="." method="_on_exit_timer_timeout"]
[connection signal="timeout" from="MealTimer" to="." method="_on_meal_timer_timeout"]
